--- a/autom4te.cache/traces.1
+++ b/autom4te.cache/traces.1
@@ -1,11 +1,8 @@
-m4trace:aclocal.m4:1053: -1- AC_SUBST([am__quote])
-m4trace:aclocal.m4:1053: -1- AC_SUBST_TRACE([am__quote])
-m4trace:aclocal.m4:1053: -1- m4_pattern_allow([^am__quote$])
-m4trace:aclocal.m4:1510: -1- m4_include([m4/libtool.m4])
-m4trace:aclocal.m4:1511: -1- m4_include([m4/ltoptions.m4])
-m4trace:aclocal.m4:1512: -1- m4_include([m4/ltsugar.m4])
-m4trace:aclocal.m4:1513: -1- m4_include([m4/ltversion.m4])
-m4trace:aclocal.m4:1514: -1- m4_include([m4/lt~obsolete.m4])
+m4trace:aclocal.m4:1525: -1- m4_include([m4/libtool.m4])
+m4trace:aclocal.m4:1526: -1- m4_include([m4/ltoptions.m4])
+m4trace:aclocal.m4:1527: -1- m4_include([m4/ltsugar.m4])
+m4trace:aclocal.m4:1528: -1- m4_include([m4/ltversion.m4])
+m4trace:aclocal.m4:1529: -1- m4_include([m4/lt~obsolete.m4])
 m4trace:configure.ac:1: -1- AC_INIT([uvaia], [1.0.0], [leomrtns@gmail.com], [], [https://github.com/quadram-institute-bioscience/uvaia])
 m4trace:configure.ac:1: -1- m4_pattern_forbid([^_?A[CHUM]_])
 m4trace:configure.ac:1: -1- m4_pattern_forbid([_AC_])
@@ -157,11 +154,11 @@ m4trace:configure.ac:1: -1- m4_pattern_allow([^host_alias$])
 m4trace:configure.ac:1: -1- AC_SUBST([target_alias])
 m4trace:configure.ac:1: -1- AC_SUBST_TRACE([target_alias])
 m4trace:configure.ac:1: -1- m4_pattern_allow([^target_alias$])
-m4trace:configure.ac:2: -1- AC_CONFIG_AUX_DIR([.])
-m4trace:configure.ac:5: -1- AC_CONFIG_HEADERS([src/config.h])
+m4trace:configure.ac:2: -1- AC_CONFIG_HEADERS([biomcmc-lib/lib/config.h])
+m4trace:configure.ac:4: -1- AC_CONFIG_AUX_DIR([.])
 m4trace:configure.ac:12: -1- AM_INIT_AUTOMAKE([subdir-objects -Wall -Werror])
 m4trace:configure.ac:12: -1- m4_pattern_allow([^AM_[A-Z]+FLAGS$])
-m4trace:configure.ac:12: -1- AM_AUTOMAKE_VERSION([1.16.2])
+m4trace:configure.ac:12: -1- AM_AUTOMAKE_VERSION([1.15.1])
 m4trace:configure.ac:12: -1- AC_REQUIRE_AUX_FILE([install-sh])
 m4trace:configure.ac:12: -1- AC_SUBST([INSTALL_PROGRAM])
 m4trace:configure.ac:12: -1- AC_SUBST_TRACE([INSTALL_PROGRAM])
@@ -302,6 +299,9 @@ m4trace:configure.ac:13: -1- m4_pattern_allow([^DEPDIR$])
 m4trace:configure.ac:13: -1- AC_SUBST([am__include])
 m4trace:configure.ac:13: -1- AC_SUBST_TRACE([am__include])
 m4trace:configure.ac:13: -1- m4_pattern_allow([^am__include$])
+m4trace:configure.ac:13: -1- AC_SUBST([am__quote])
+m4trace:configure.ac:13: -1- AC_SUBST_TRACE([am__quote])
+m4trace:configure.ac:13: -1- m4_pattern_allow([^am__quote$])
 m4trace:configure.ac:13: -1- AM_CONDITIONAL([AMDEP], [test "x$enable_dependency_tracking" != xno])
 m4trace:configure.ac:13: -1- AC_SUBST([AMDEP_TRUE])
 m4trace:configure.ac:13: -1- AC_SUBST_TRACE([AMDEP_TRUE])
@@ -726,64 +726,95 @@ m4trace:configure.ac:37: -1- m4_pattern_allow([^CHECK_CFLAGS$])
 m4trace:configure.ac:37: -1- AC_SUBST([CHECK_LIBS])
 m4trace:configure.ac:37: -1- AC_SUBST_TRACE([CHECK_LIBS])
 m4trace:configure.ac:37: -1- m4_pattern_allow([^CHECK_LIBS$])
+m4trace:configure.ac:39: -2- AC_DEFINE_TRACE_LITERAL([HAVE_ZLIB])
+m4trace:configure.ac:39: -2- m4_pattern_allow([^HAVE_ZLIB$])
+m4trace:configure.ac:39: -2- AH_OUTPUT([HAVE_ZLIB], [/* io gz compression library found */
+@%:@undef HAVE_ZLIB])
+m4trace:configure.ac:40: -2- AC_DEFINE_TRACE_LITERAL([HAVE_ZLIB])
+m4trace:configure.ac:40: -2- m4_pattern_allow([^HAVE_ZLIB$])
+m4trace:configure.ac:40: -2- AH_OUTPUT([HAVE_ZLIB], [/* gz compression library not found */
+@%:@undef HAVE_ZLIB])
 m4trace:configure.ac:38: -1- AC_SUBST([ZLIB_CFLAGS])
 m4trace:configure.ac:38: -1- AC_SUBST_TRACE([ZLIB_CFLAGS])
 m4trace:configure.ac:38: -1- m4_pattern_allow([^ZLIB_CFLAGS$])
 m4trace:configure.ac:38: -1- AC_SUBST([ZLIB_LIBS])
 m4trace:configure.ac:38: -1- AC_SUBST_TRACE([ZLIB_LIBS])
 m4trace:configure.ac:38: -1- m4_pattern_allow([^ZLIB_LIBS$])
-m4trace:configure.ac:45: -1- AC_DEFINE_TRACE_LITERAL([BIOMCMC_DEBUG])
-m4trace:configure.ac:45: -1- m4_pattern_allow([^BIOMCMC_DEBUG$])
-m4trace:configure.ac:45: -1- AH_OUTPUT([BIOMCMC_DEBUG], [/* Debug Mode, with assert()-like error checking */
+m4trace:configure.ac:43: -2- AC_DEFINE_TRACE_LITERAL([HAVE_LZMA])
+m4trace:configure.ac:43: -2- m4_pattern_allow([^HAVE_LZMA$])
+m4trace:configure.ac:43: -2- AH_OUTPUT([HAVE_LZMA], [/* io xz compression library found */
+@%:@undef HAVE_LZMA])
+m4trace:configure.ac:44: -2- AC_DEFINE_TRACE_LITERAL([HAVE_LZMA])
+m4trace:configure.ac:44: -2- m4_pattern_allow([^HAVE_LZMA$])
+m4trace:configure.ac:44: -2- AH_OUTPUT([HAVE_LZMA], [/* xz compression library not found */
+@%:@undef HAVE_LZMA])
+m4trace:configure.ac:42: -1- AC_SUBST([LZMA_CFLAGS])
+m4trace:configure.ac:42: -1- AC_SUBST_TRACE([LZMA_CFLAGS])
+m4trace:configure.ac:42: -1- m4_pattern_allow([^LZMA_CFLAGS$])
+m4trace:configure.ac:42: -1- AC_SUBST([LZMA_LIBS])
+m4trace:configure.ac:42: -1- AC_SUBST_TRACE([LZMA_LIBS])
+m4trace:configure.ac:42: -1- m4_pattern_allow([^LZMA_LIBS$])
+m4trace:configure.ac:47: -2- AC_DEFINE_TRACE_LITERAL([HAVE_BZIP2])
+m4trace:configure.ac:47: -2- m4_pattern_allow([^HAVE_BZIP2$])
+m4trace:configure.ac:47: -2- AH_OUTPUT([HAVE_BZIP2], [/* io bz2 compression library found */
+@%:@undef HAVE_BZIP2])
+m4trace:configure.ac:48: -2- AC_DEFINE_TRACE_LITERAL([HAVE_BZIP2])
+m4trace:configure.ac:48: -2- m4_pattern_allow([^HAVE_BZIP2$])
+m4trace:configure.ac:48: -2- AH_OUTPUT([HAVE_BZIP2], [/* bz2 compression library not found */
+@%:@undef HAVE_BZIP2])
+m4trace:configure.ac:50: -1- AH_OUTPUT([HAVE_LIBBZ2], [/* Define to 1 if you have the `bz2\' library (-lbz2). */
+@%:@undef HAVE_LIBBZ2])
+m4trace:configure.ac:50: -1- AC_DEFINE_TRACE_LITERAL([HAVE_LIBBZ2])
+m4trace:configure.ac:50: -1- m4_pattern_allow([^HAVE_LIBBZ2$])
+m4trace:configure.ac:58: -1- AC_DEFINE_TRACE_LITERAL([BIOMCMC_DEBUG])
+m4trace:configure.ac:58: -1- m4_pattern_allow([^BIOMCMC_DEBUG$])
+m4trace:configure.ac:58: -1- AH_OUTPUT([BIOMCMC_DEBUG], [/* Debug Mode, with assert()-like error checking */
 @%:@undef BIOMCMC_DEBUG])
-m4trace:configure.ac:65: -1- AC_SUBST([AM_CFLAGS])
-m4trace:configure.ac:65: -1- AC_SUBST_TRACE([AM_CFLAGS])
-m4trace:configure.ac:65: -1- m4_pattern_allow([^AM_CFLAGS$])
-m4trace:configure.ac:66: -1- AC_SUBST([AM_LDFLAGS])
-m4trace:configure.ac:66: -1- AC_SUBST_TRACE([AM_LDFLAGS])
-m4trace:configure.ac:66: -1- m4_pattern_allow([^AM_LDFLAGS$])
-m4trace:configure.ac:67: -1- AC_SUBST([MPI_CXXLIBS])
-m4trace:configure.ac:67: -1- AC_SUBST_TRACE([MPI_CXXLIBS])
-m4trace:configure.ac:67: -1- m4_pattern_allow([^MPI_CXXLIBS$])
-m4trace:configure.ac:68: -1- AC_SUBST([MPI_CXXFLAGS])
-m4trace:configure.ac:68: -1- AC_SUBST_TRACE([MPI_CXXFLAGS])
-m4trace:configure.ac:68: -1- m4_pattern_allow([^MPI_CXXFLAGS$])
-m4trace:configure.ac:71: -1- _m4_warn([cross], [cannot check for file existence when cross compiling], [../../lib/autoconf/general.m4:2788: AC_CHECK_FILE is expanded from...
-configure.ac:71: the top level])
-m4trace:configure.ac:72: -1- _m4_warn([cross], [cannot check for file existence when cross compiling], [../../lib/autoconf/general.m4:2788: AC_CHECK_FILE is expanded from...
-configure.ac:72: the top level])
-m4trace:configure.ac:74: -1- AC_CONFIG_SUBDIRS([biomcmc-lib])
-m4trace:configure.ac:74: -1- AC_SUBST([subdirs], ["$subdirs m4_normalize([biomcmc-lib])"])
-m4trace:configure.ac:74: -1- AC_SUBST_TRACE([subdirs])
-m4trace:configure.ac:74: -1- m4_pattern_allow([^subdirs$])
-m4trace:configure.ac:75: -1- AC_SUBST([BIOMCMCLIB], [biomcmc-lib])
-m4trace:configure.ac:75: -1- AC_SUBST_TRACE([BIOMCMCLIB])
-m4trace:configure.ac:75: -1- m4_pattern_allow([^BIOMCMCLIB$])
-m4trace:configure.ac:77: -1- AC_CONFIG_FILES([Makefile src/Makefile submodules/WFA/Makefile])
-m4trace:configure.ac:78: -1- AC_SUBST([LIB@&t@OBJS], [$ac_libobjs])
-m4trace:configure.ac:78: -1- AC_SUBST_TRACE([LIB@&t@OBJS])
-m4trace:configure.ac:78: -1- m4_pattern_allow([^LIB@&t@OBJS$])
-m4trace:configure.ac:78: -1- AC_SUBST([LTLIBOBJS], [$ac_ltlibobjs])
-m4trace:configure.ac:78: -1- AC_SUBST_TRACE([LTLIBOBJS])
-m4trace:configure.ac:78: -1- m4_pattern_allow([^LTLIBOBJS$])
-m4trace:configure.ac:78: -1- AM_CONDITIONAL([am__EXEEXT], [test -n "$EXEEXT"])
-m4trace:configure.ac:78: -1- AC_SUBST([am__EXEEXT_TRUE])
-m4trace:configure.ac:78: -1- AC_SUBST_TRACE([am__EXEEXT_TRUE])
-m4trace:configure.ac:78: -1- m4_pattern_allow([^am__EXEEXT_TRUE$])
-m4trace:configure.ac:78: -1- AC_SUBST([am__EXEEXT_FALSE])
-m4trace:configure.ac:78: -1- AC_SUBST_TRACE([am__EXEEXT_FALSE])
-m4trace:configure.ac:78: -1- m4_pattern_allow([^am__EXEEXT_FALSE$])
-m4trace:configure.ac:78: -1- _AM_SUBST_NOTMAKE([am__EXEEXT_TRUE])
-m4trace:configure.ac:78: -1- _AM_SUBST_NOTMAKE([am__EXEEXT_FALSE])
-m4trace:configure.ac:78: -1- AC_SUBST_TRACE([top_builddir])
-m4trace:configure.ac:78: -1- AC_SUBST_TRACE([top_build_prefix])
-m4trace:configure.ac:78: -1- AC_SUBST_TRACE([srcdir])
-m4trace:configure.ac:78: -1- AC_SUBST_TRACE([abs_srcdir])
-m4trace:configure.ac:78: -1- AC_SUBST_TRACE([top_srcdir])
-m4trace:configure.ac:78: -1- AC_SUBST_TRACE([abs_top_srcdir])
-m4trace:configure.ac:78: -1- AC_SUBST_TRACE([builddir])
-m4trace:configure.ac:78: -1- AC_SUBST_TRACE([abs_builddir])
-m4trace:configure.ac:78: -1- AC_SUBST_TRACE([abs_top_builddir])
-m4trace:configure.ac:78: -1- AC_SUBST_TRACE([INSTALL])
-m4trace:configure.ac:78: -1- AC_SUBST_TRACE([MKDIR_P])
-m4trace:configure.ac:78: -1- AC_REQUIRE_AUX_FILE([ltmain.sh])
+m4trace:configure.ac:78: -1- AC_SUBST([AM_CFLAGS])
+m4trace:configure.ac:78: -1- AC_SUBST_TRACE([AM_CFLAGS])
+m4trace:configure.ac:78: -1- m4_pattern_allow([^AM_CFLAGS$])
+m4trace:configure.ac:79: -1- AC_SUBST([AM_LDFLAGS])
+m4trace:configure.ac:79: -1- AC_SUBST_TRACE([AM_LDFLAGS])
+m4trace:configure.ac:79: -1- m4_pattern_allow([^AM_LDFLAGS$])
+m4trace:configure.ac:80: -1- AC_SUBST([MPI_CXXLIBS])
+m4trace:configure.ac:80: -1- AC_SUBST_TRACE([MPI_CXXLIBS])
+m4trace:configure.ac:80: -1- m4_pattern_allow([^MPI_CXXLIBS$])
+m4trace:configure.ac:81: -1- AC_SUBST([MPI_CXXFLAGS])
+m4trace:configure.ac:81: -1- AC_SUBST_TRACE([MPI_CXXFLAGS])
+m4trace:configure.ac:81: -1- m4_pattern_allow([^MPI_CXXFLAGS$])
+m4trace:configure.ac:84: -1- _m4_warn([cross], [cannot check for file existence when cross compiling], [../../lib/autoconf/general.m4:2788: AC_CHECK_FILE is expanded from...
+configure.ac:84: the top level])
+m4trace:configure.ac:85: -1- _m4_warn([cross], [cannot check for file existence when cross compiling], [../../lib/autoconf/general.m4:2788: AC_CHECK_FILE is expanded from...
+configure.ac:85: the top level])
+m4trace:configure.ac:88: -1- AC_SUBST([BIOMCMCLIB], [biomcmc-lib])
+m4trace:configure.ac:88: -1- AC_SUBST_TRACE([BIOMCMCLIB])
+m4trace:configure.ac:88: -1- m4_pattern_allow([^BIOMCMCLIB$])
+m4trace:configure.ac:90: -1- AC_CONFIG_FILES([biomcmc-lib/Makefile biomcmc-lib/lib/Makefile biomcmc-lib/tests/Makefile 
+                Makefile src/Makefile submodules/WFA/Makefile])
+m4trace:configure.ac:92: -1- AC_SUBST([LIB@&t@OBJS], [$ac_libobjs])
+m4trace:configure.ac:92: -1- AC_SUBST_TRACE([LIB@&t@OBJS])
+m4trace:configure.ac:92: -1- m4_pattern_allow([^LIB@&t@OBJS$])
+m4trace:configure.ac:92: -1- AC_SUBST([LTLIBOBJS], [$ac_ltlibobjs])
+m4trace:configure.ac:92: -1- AC_SUBST_TRACE([LTLIBOBJS])
+m4trace:configure.ac:92: -1- m4_pattern_allow([^LTLIBOBJS$])
+m4trace:configure.ac:92: -1- AM_CONDITIONAL([am__EXEEXT], [test -n "$EXEEXT"])
+m4trace:configure.ac:92: -1- AC_SUBST([am__EXEEXT_TRUE])
+m4trace:configure.ac:92: -1- AC_SUBST_TRACE([am__EXEEXT_TRUE])
+m4trace:configure.ac:92: -1- m4_pattern_allow([^am__EXEEXT_TRUE$])
+m4trace:configure.ac:92: -1- AC_SUBST([am__EXEEXT_FALSE])
+m4trace:configure.ac:92: -1- AC_SUBST_TRACE([am__EXEEXT_FALSE])
+m4trace:configure.ac:92: -1- m4_pattern_allow([^am__EXEEXT_FALSE$])
+m4trace:configure.ac:92: -1- _AM_SUBST_NOTMAKE([am__EXEEXT_TRUE])
+m4trace:configure.ac:92: -1- _AM_SUBST_NOTMAKE([am__EXEEXT_FALSE])
+m4trace:configure.ac:92: -1- AC_SUBST_TRACE([top_builddir])
+m4trace:configure.ac:92: -1- AC_SUBST_TRACE([top_build_prefix])
+m4trace:configure.ac:92: -1- AC_SUBST_TRACE([srcdir])
+m4trace:configure.ac:92: -1- AC_SUBST_TRACE([abs_srcdir])
+m4trace:configure.ac:92: -1- AC_SUBST_TRACE([top_srcdir])
+m4trace:configure.ac:92: -1- AC_SUBST_TRACE([abs_top_srcdir])
+m4trace:configure.ac:92: -1- AC_SUBST_TRACE([builddir])
+m4trace:configure.ac:92: -1- AC_SUBST_TRACE([abs_builddir])
+m4trace:configure.ac:92: -1- AC_SUBST_TRACE([abs_top_builddir])
+m4trace:configure.ac:92: -1- AC_SUBST_TRACE([INSTALL])
+m4trace:configure.ac:92: -1- AC_SUBST_TRACE([MKDIR_P])
+m4trace:configure.ac:92: -1- AC_REQUIRE_AUX_FILE([ltmain.sh])
